# DS2WETSUBMISSION

./: AvlTreeNew.h  CMakeLists.txt  Customer.cpp  Customer.h  CustomersDb.h  CustomersTree.h  Disk_Node.h  Group.h  HashTable.h  RecordsComapnyExceptions.h  UnionFind2.cpp  UnionFind2.h  main.py  merged_result.txt  recordsCompany.cpp  recordsCompany.h  summary.txt  tester.py
inFiles/: prizetests.in  test10.in.valgrind_log
outFiles/: prizeout10.out  result10.txt  result11.txt  result12.txt  result13.txt  result14.txt  result15.txt  result16.txt  result17.txt  result18.txt  result19.txt  result20.txt  result21.txt  result22.txt  result23.txt  result24.txt  result25.txt  result26.txt  result27.txt  result28.txt  result29.txt  result30.txt  result31.txt  result32.txt  result33.txt  result34.txt  result35.txt  result36.txt  result37.txt  result38.txt  result39.txt  result40.txt  result41.txt  result42.txt  result43.txt  result44.txt  result45.txt  result46.txt  result47.txt  result48.txt  (+212 more)
